add start from slide

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 	<template id="cardTemplate">
 		<div class="card">
 			<div class="card-handle">⠿</div>
-			<p class="card-id">{{id}}</p>
+			<div class="buttons">
+				<button class="card-id">{{id}}</button>
+			</div>
 			<div class="buttons">
 				<button class="button-add">+</button>
 				<button class="button-remove">x</button>
