--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="editor" id="editor">
 			<div class="editor-info">
 				<p>Press <b>ESC</b> to switch modes (edit/view)</p>
-				<p>Press <b>Tab</b> to switch colors on and off (in view mode)</p>
+				<p>Press <b>Tab</b> to switch theme (in view mode)</p>
 				<p>Press <b>F2</b> to import (in edit mode)</p>
 				<p>Press <b>F3</b> to export (in edit mode)</p>
 				<p id="info-total"></p>
