add new card shift+enter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<p>Press <b>Tab</b> to switch theme (in view mode)</p>
 				<p>Press <b>F2</b> to import (in edit mode)</p>
 				<p>Press <b>F3</b> to export (in edit mode)</p>
+				<p>Press <b>Shift+Enter</b> to add a card below (in edit mode)</p>
 				<p id="info-total"></p>
 			</div>
 			<div class="list" id="list"></div>
