--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 	</div>
 	<template id="cardTemplate">
 		<div class="card">
-			<div class="card-handle">⠿</div>
 			<div class="buttons">
 				<button class="card-id">{{id}}</button>
 			</div>
@@ -36,6 +35,10 @@
 				<button class="button-add">+</button>
 			</div>
 			<textarea class="text"></textarea>
+			<div class="buttons">
+				<button class="button-position">_</button>
+				<button class="button-type">_</button>
+			</div>
 		</div>
 	</template>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
