add positioning content

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 			</div>
 			<textarea class="text"></textarea>
 			<div class="buttons">
-				<button class="button-position">_</button>
-				<button class="button-type">_</button>
+				<button class="button-position button-img"><img src="icons/pos-0.png"></button>
+				<button class="button-type button-img">_</button>
 			</div>
 		</div>
 	</template>
