--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<div class="editor-info">
 				<p>Press <b>ESC</b> to switch modes (edit/view)</p>
 				<p>Press <b>Tab</b> to switch theme (in view mode)</p>
-				<p>Press <b>F2</b> to import (in edit mode)</p>
-				<p>Press <b>F3</b> to export (in edit mode)</p>
+				<p>Press <b>F2</b> to upload (in edit mode)</p>
+				<p>Press <b>F3</b> to download (in edit mode)</p>
 				<p>Press <b>Shift+Enter</b> to add a card below (in edit mode)</p>
 				<p id="info-total"></p>
 			</div>
@@ -50,6 +50,7 @@
 	<script src="https://cdn.jsdelivr.net/gh/dreamerslab/jquery.actual/jquery.actual.min.js"></script>
 	<script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/11.0.0/markdown-it.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"></script>
 	
 	<script src="script.js"></script>
 </body>
