--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
 					<button class="button-download">Download</button>
 				</div>
 				<div class="group">
+					<button class="button-remote" title="remote"><img src="icons/remote.png"></button>
 					<button class="button-view" title="view"><img src="icons/eye.png"></button>
 					<button class="button-theme" title="theme">Colors</button>
 				</div>
 				<div class="group">
 					<button class="button-clearAll">Clear ALL</button>
-					<button class="button-clearempty">Clear Empty</button>
+					<button class="button-clearEmpty">Clear Empty</button>
 				</div>
 			</div>
 			<div class="row">
 				<div class="side">
-					
+					<ul id="outline"></ul>
 				</div>
 				<div class="col">
 					<div class="editor-info">
@@ -73,6 +74,7 @@
 	<script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/11.0.0/markdown-it.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"></script>
+	<script src="https://socketio--vandesm14.repl.co/socket.io/socket.io.js"></script>
 
 	<script src="script.js"></script>
 </body>
