--- a/remote.html
+++ b/remote.html
@@ -14,7 +14,7 @@
 			<h1 class="info">Slide 0 of 0</h1>
 		</div>
 		<div class="row">
-			<button class="button-prev">Prev</button c>
+			<button class="button-prev">Prev</button>
 			<button class="button-next">Next</button>
 		</div>
 		<div class="row">
