fix tiles view for remote

--- a/public/remote.html
+++ b/public/remote.html
@@ -32,6 +32,7 @@
 				<div class="group">
 					<button class="button-switchView">View Remote</button>
 					<button class="button-theme">Theme</button>
+					<button class="button-refresh">Refresh Tiles</button>
 				</div>
 				<div class="group">
 					<button id="status"></button>
