replace animation system

--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,10 @@
 			</div>
 		</div>
 		<div class="viewer" id="viewer" style="display:none">
-			<p class="frame" style="background-color:white;color:black">No slides</p>
+			<div class="frame now"></div>
+			<div class="frame next"></div>
 		</div>
+		<div class="viewer" id="render"></div>
 	</div>
 	<template id="cardTemplate">
 		<div class="card">
